RD-2009-02-03-0: CVS:         Created V62u2_RC1_TAG
---------------------------------------------------

AP-2009-02-03-0: Bugfix:      SQL queries don't display all column values and
                              saving of the result causes an exception
                 Bugster:     6792542
                 Issue:       2869
                 Review:      JO

AP-2009-01-26-0: Bugfix:      File permissions must be set by admin user
                 Review:      JO

RD-2008-12-12-0: CVS:         Created V62u2beta_TAG
---------------------------------------------------

RD-2008-12-09-0: CVS:         Created V62u2alpha2_TAG
-----------------------------------------------------

RD-2008-11-28-0: CVS:         Created V62u2alpha1_TAG
-----------------------------------------------------

AP-2008-11-19-0: Bugfix:      Dbwriter is not starting after reboot of the machine
                 Bugster:     6764942
                 Issue:       2790
                 Review:      DG

MD-2008-11-13-0: CVS:         Created V62u1_TAG
-----------------------------------------------

AP-2008-10-30-0: Bugfix:      Updating Changelog entry
                 Belongs to:  AP-2008-10-20-0

AP-2008-10-20-0: Bugfix:      adding the missing file BigDecimalField.java
                 Belongs to:  AP-2008-10-17-0
                 Review:      JO

JO-2008-10-17-0: Bugfix:      dbwriter installation fails if admin_user in bootstrap file is 'none'    
                 Bugster:     6743431
                 Issue:       2712
                 Review:      LP

AP-2008-10-17-0: Bugfix:      All foreign and primary keys in db_definition.xml
                              should be defined as bigint
                 Bugster:     6717825
                 Issue:       2626
                 Review:      JO

JO-2008-09-25-0: Enhancem.:   Fixed Cangelog entry

JO-2008-09-12-0: Bugfix:      Fixed commit JO-2008-08-26-0 - database version upgrade needs to be enhanced
                 Review:      LP
